[package]
name = "mux-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"]}
serde = "1.0"
scraper = "0.14.0"
toml = "0.5.10"